--- a/WebFileSystem/WebFileSystem.Api/WebFileSystem.Api.csproj
+++ b/WebFileSystem/WebFileSystem.Api/WebFileSystem.Api.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WebFileSystem.Service\WebFileSystem.Service.csproj" />
+  </ItemGroup>
+
 </Project>
