--- a/WebFileSystem/WebFileSystem.Service/WebFileSystem.Service.csproj
+++ b/WebFileSystem/WebFileSystem.Service/WebFileSystem.Service.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WebFileSystem.StorageBroker\WebFileSystem.StorageBroker.csproj" />
+  </ItemGroup>
+
 </Project>
