--- a/WebFileSystem/WebFileSystem.Service/WebFileSystem.Service.csproj
+++ b/WebFileSystem/WebFileSystem.Service/WebFileSystem.Service.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WebFileSystem.StorageBroker\WebFileSystem.StorageBroker.csproj" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
